Move translation button to footer

--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -11,7 +11,7 @@ description: Welcome to BEVAE
   <div class="stack g4 centerx squeeze11">
     <section class="stack g1">
       <h1>Bienvenido</h1>
-      <div class="sidebar gx2 gy0 rowreverse jfyend itemsstart">
+      <div class="sidebar g2 rowreverse jfyend itemsstart">
         <div class="[ image ] [ frame1:1 squeeze7 side7 ]">
           <img src="/assets/img/profile_hi-res.jpg"
           srcset="/assets/img/profile_hi-res.jpg 3x,
@@ -21,8 +21,8 @@ description: Welcome to BEVAE
         </div>
         <div class="main50% flow1">
           <p>Hola! Soy Frederik, estudiante de fisioterapia en la Universidad San Pablo en Madrid, España. Me encanta promover la salud y ayudar a las personas a lograr sus objetivos funcionales.</p>
-          <p> Para una gran cantidad de gente en la sociedad, existe una sensación y emoción muy personal, a menudo desagradable, que se mete en muchos aspectos de su vida: el dolor.</p>
-          <p>Con un enfoque en el dolor como un síntoma así como una condición, es mi objetivo aquí desarrollar una variedad de recursos gratuitos para clínicos, pacientes, y otras personas curiosas. Quiero hacer fácil darle sentido a esta experiencia tan común y a la vez tan incomprendida (y estigmatizada).</p>
+          <p> Para una gran cantidad de gente en la sociedad existe una sensación y emoción muy personal, a menudo desagradable, que se mete en muchos aspectos de su vida: el dolor.</p>
+          <p>Con un enfoque en el dolor como un síntoma así como una condición en sí mismo, es mi objetivo aquí desarrollar una variedad de recursos gratuitos para clínicos, pacientes, y otras personas curiosas. Quiero hacer fácil darle sentido a esta experiencia tan común y a la vez tan incomprendida (y estigmatizada).</p>
           <p>¡Siéntete libre de descargar y redistribuir mi contenido! Sólo que tengas en cuenta que actualizaré de forma continuada el sitio web a medida que evolucionen mis opiniones y ambiciones.</p>
           <p><i>DESCARGO DE RESPONSABILIDAD: Este sitio web tiene sólo fines educativos. No estoy proporcionando aconsejo médico personalizado ni asumo ninguna responsabilidad por lo que hagas con la información presentada.</i></p>
         </div>
