Add danish folder, add netlify 404 redirect

--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -42,7 +42,7 @@ description: Welcome to BEVAE
       <section class="flow1/3">
         <h3>Formularios</h3>
         <ul>
-          <li><a href="/es/formularios/oemsq-12">ÖMSQ-12</a> - un cuestionario práctico de detección en las dolencias musculoesqueléticas, adaptado de <i>Gabel et al. 2013.</i><strong> Aún no validado en castellano.</strong></li>
+          <li><a href="/es/formularios/oemsq-12">ÖMSQ-12</a> - un cuestionario práctico de detección en las dolencias musculoesqueléticas, adaptado de <i>Gabel et al. 2013.</i><strong> Aún no se ha validado en español.</strong></li>
         </ul>
       </section>
     </section>
