--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -6,7 +6,7 @@ description: Welcome to BEVAE
 ---
 {% extends 'base.html' %}
 {% block head %}
-<link rel="preload" href="/assets/img/profile_lo-res.jpg" as="image">
+<link rel="preload" href="/assets/img/profile_me-res.jpg" as="image">
 {% endblock %}
 {% block body %}
 {% include 'partials/header.html' %}
@@ -16,11 +16,7 @@ description: Welcome to BEVAE
       <h1>Welcome</h1>
       <div class="sidebar g2 rowreverse jfyend itemsstart">
         <div class="[ image ] [ frame1:1 squeeze7 side7 ]">
-          <img src="/assets/img/profile_hi-res.jpg"
-          srcset="/assets/img/profile_hi-res.jpg 3x,
-          /assets/img/profile_me-res.jpg 2x,
-          /assets/img/profile_lo-res.jpg 1x"
-          alt="Frederik smiling at the camera">
+          <img src="/assets/img/profile_me-res.jpg" alt="Frederik smiling at the camera">
         </div>
         <div class="main50% flow1">
           <p>Hey there! I'm Frederik, a physiotherapy student at San Pablo University in Madrid, Spain. I love promoting health and helping people achieve their functional goals.</p>
