Add homepage meta descs

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -2,7 +2,7 @@
 translationKey: home
 title: Welcome to BEVAE
 permalink: /en/
-description: Welcome to BEVAE
+description: The pain revolution is here. BEVAE provides free educational resources which cover all dimensions of this misunderstood experience. Whether you're a health professional, a person with pain, or just curious, BEVAE makes it easy to learn about the nature of pain and pain management principles.
 ---
 {% extends 'base.html' %}
 {% block head %}
@@ -28,7 +28,7 @@ description: Welcome to BEVAE
       </div>
     </section>
     <section class="flow2">
-      <h2>For clinicians</h2>
+      <h2>For professionals</h2>
       <section class="flow1/3">
         <h3>Articles</h3>
         <ul class="flow1/3">
