--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -2,7 +2,7 @@
 translationKey: home
 title: Bienvenido a BEVAE
 permalink: /es/
-description: Welcome to BEVAE
+description: La revolución del dolor ya ha llegado. BEVAE proporciona recursos educativos gratuitos que tratan con todos los dimensiones de esta experiencia incomprendida. Si eres sanitario, o una persona con dolor o simplemente tienes curiosidad, BEVAE facilita el aprendizaje de la naturaleza del dolor y los principios de su tratamiento.
 ---
 {% extends 'base.html' %}
 {% block head %}
@@ -28,7 +28,7 @@ description: Welcome to BEVAE
       </div>
     </section>
     <section class="flow2">
-      <h2>Para clínicos</h2>
+      <h2>Para sanitarios</h2>
       <section class="flow1/3">
         <h3>Artículos</h3>
         <ul class="flow1/3">
@@ -48,7 +48,7 @@ description: Welcome to BEVAE
     <section class="flow1">
       <h2>Para pacientes</h2>
       <ul>
-        <li><i>¡Permanece atento! ♫</i></li>
+        <li><i>¡Permanece atento!</i></li>
       </ul>
     </section>
   </div>
