--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,6 +1,7 @@
 ---
 title: BEVAE
 permalink: /
+description: The pain revolution is here. BEVAE provides free educational resources which cover all dimensions of this misunderstood experience. Whether you're a health professional, a person with pain, or just curious, BEVAE makes it easy to learn about the nature of pain and pain management principles.
 ---
 {% extends "base.html" %}
 {% block body %}
