Swap homepage sections order

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -27,8 +27,14 @@ description: The pain revolution is here. BEVAE provides free educational resour
         </div>
       </div>
     </section>
+    <section class="flow1">
+      <h2>For people with pain:</h2>
+      <ul>
+        <li><em>Stay tuned! ♫</em></li>
+      </ul>
+    </section>
     <section class="flow2">
-      <h2>For professionals</h2>
+      <h2>For health professionals:</h2>
       <section class="flow1/3">
         <h3>Articles</h3>
         <ul class="flow1/3">
@@ -44,12 +50,6 @@ description: The pain revolution is here. BEVAE provides free educational resour
           <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a> - a practical screening questionnaire for musculoskeletal complaints, adapted from <i>Gabel et al. 2013.</i></li>
         </ul>
       </section>
-    </section>
-    <section class="flow1">
-      <h2>For patients</h2>
-      <ul>
-        <li><i>Stay tuned! ♫</i></li>
-      </ul>
     </section>
   </div>
 </main>
