--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -19,7 +19,7 @@ description: La revolución del dolor ya ha llegado. BEVAE proporciona recursos 
           <img src="/assets/img/profile_me-res.jpg" alt="Frederik smiling at the camera">
         </div>
         <div class="main50% flow1">
-          <p>Hola! Soy Frederik, estudiante de fisioterapia en la Universidad San Pablo en Madrid, España. Me encanta promover la salud y ayudar a las personas a lograr sus objetivos funcionales.</p>
+          <p>¡Hola! Me llamo Frederik y soy estudiante de fisioterapia en la Universidad San Pablo en Madrid, España. Me encanta promover la salud y ayudar a las personas a lograr sus objetivos funcionales.</p>
           <p> Para una gran cantidad de gente en la sociedad existe una sensación y emoción muy personal, a menudo desagradable, que se mete en muchos aspectos de su vida: el dolor.</p>
           <p>Con un enfoque en el dolor como un síntoma así como una condición en sí mismo, es mi objetivo aquí desarrollar una variedad de recursos gratuitos para clínicos, pacientes, y otras personas curiosas. Quiero hacer fácil darle sentido a esta experiencia tan común y a la vez tan incomprendida (y estigmatizada).</p>
           <p>¡Siéntete libre de descargar y redistribuir mi contenido! Sólo que tengas en cuenta que actualizaré de forma continuada el sitio web a medida que evolucionen mis opiniones y ambiciones.</p>
@@ -27,8 +27,14 @@ description: La revolución del dolor ya ha llegado. BEVAE proporciona recursos 
         </div>
       </div>
     </section>
+    <section class="flow1">
+      <h2>Para personas con dolor:</h2>
+      <ul>
+        <li><em>¡Permanece atento!</em></li>
+      </ul>
+    </section>
     <section class="flow2">
-      <h2>Para sanitarios</h2>
+      <h2>Para sanitarios:</h2>
       <section class="flow1/3">
         <h3>Artículos</h3>
         <ul class="flow1/3">
@@ -44,12 +50,6 @@ description: La revolución del dolor ya ha llegado. BEVAE proporciona recursos 
           <li><a href="/es/formularios/oemsq-12">ÖMSQ-12</a> - un cuestionario práctico de detección en las dolencias musculoesqueléticas, adaptado de <i>Gabel et al. 2013.</i><strong> Aún no se ha validado en español.</strong></li>
         </ul>
       </section>
-    </section>
-    <section class="flow1">
-      <h2>Para pacientes</h2>
-      <ul>
-        <li><i>¡Permanece atento!</i></li>
-      </ul>
     </section>
   </div>
 </main>
