Change body font and color, move disclaimer to footer

--- a/src/content/colors.html
+++ b/src/content/colors.html
@@ -1,15 +1,14 @@
 ---
+title: colors
 permalink: /colors/
-title: Color palette
-description:
 ---
 {% extends 'base.html' %}
 {% block body %}
 <main>
-  <div class="[ stack ] [ g1 px3 py6 ]" style="background: #fff">
+  <div class="[ cover stack g1 ] [ px3 ]">
     <h1>Colors</h1>
-    <div class="[ switcher10 ] [ g2 ]">
-      <div class="[ stack ] [ g-3 ]">
+    <div class="switcher10 g2">
+      <div class="stack g-3">
         <h2>Primary</h2>
         <div class="stack">
           <div class="px3 py0 bg-p50"></div>
@@ -24,7 +23,7 @@ description:
           <div class="px3 py0 bg-p900"></div>
         </div>
       </div>
-      <div class="[ stack ] [ g-3 ]">
+      <div class="stack g-3">
         <h2>Neutral</h2>
         <div class="stack">
           <div class="px3 py0 bg-n50"></div>
@@ -39,7 +38,7 @@ description:
           <div class="px3 py0 bg-n900"></div>
         </div>
       </div>
-      <div class="[ stack ] [ g-3 ]">
+      <div class="stack g-3">
         <h2>Accent</h2>
         <div class="stack">
           <div class="px3 py0 bg-a50"></div>
