--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -1,8 +1,8 @@
 ---
 translationKey: home
-title: Welcome to BEVAE
+title: home
 permalink: /en/
-description: The pain revolution is here. BEVAE provides free educational resources which cover all dimensions of this misunderstood experience. Whether you're a health professional, a person with pain, or just curious, BEVAE makes it easy to learn about the nature of pain and pain management principles.
+description: The pain revolution is here. Whether you're a health professional, a person with pain, or just curious, BEVAE makes it easy to learn about the nature of pain and modern pain management principles.
 ---
 {% extends 'base.html' %}
 {% block head %}
@@ -13,7 +13,7 @@ description: The pain revolution is here. BEVAE provides free educational resour
 <main>
   <div class="stack g4 centerx squeeze11">
     <section class="stack g1">
-      <h1>Welcome</h1>
+      <h1>Welcome.</h1>
       <div class="sidebar g2 rowreverse jfyend itemsstart">
         <div class="[ image ] [ frame1:1 squeeze7 side7 ]">
           <img src="/assets/img/profile_me-res.jpg" alt="Frederik smiling at the camera">
@@ -23,18 +23,17 @@ description: The pain revolution is here. BEVAE provides free educational resour
           <p>For a large number of people in society, there's a very personal, often unpleasant sensation and emotion which intrudes on many aspects of their life: pain.</p>
           <p>With a focus on pain as both a symptom and a condition in and of itself, my goal here is to develop a variety of free resources for clinicians, patients, and other curious people. I want to make it easy for everyone to make sense of this common yet misunderstood (and stigmatized) experience.</p>
           <p>Feel free to download and redistribute my content! Just keep in mind that I will be continually updating the website as my views and ambitions evolve.</p>
-          <p><i>DISCLAIMER: This website is for educational purposes only. I am not providing personalized medical advice and I take no responsibility for what you do with the information presented.</i></p>
         </div>
       </div>
     </section>
-    <section class="flow1">
-      <h2>For people with pain:</h2>
+    <section class="flow2">
+      <h2 class="h-lined">For patients</h2>
       <ul>
         <li><em>Stay tuned! ♫</em></li>
       </ul>
     </section>
     <section class="flow2">
-      <h2>For health professionals:</h2>
+      <h2 class="h-lined">For professionals</h2>
       <section class="flow1/3">
         <h3>Articles</h3>
         <ul class="flow1/3">
