--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -1,8 +1,8 @@
 ---
 translationKey: home
-title: Bienvenido a BEVAE
+title: inicio
 permalink: /es/
-description: La revolución del dolor ya ha llegado. BEVAE proporciona recursos educativos gratuitos que tratan con todos los dimensiones de esta experiencia incomprendida. Si eres sanitario, o una persona con dolor o simplemente tienes curiosidad, BEVAE facilita el aprendizaje de la naturaleza del dolor y los principios de su tratamiento.
+description: La revolución del dolor ya ha llegado. Si eres sanitario, o una persona con dolor o simplemente tienes curiosidad, BEVAE facilita el aprendizaje de la naturaleza del dolor y los principios modernos de su manejo.
 ---
 {% extends 'base.html' %}
 {% block head %}
@@ -23,7 +23,6 @@ description: La revolución del dolor ya ha llegado. BEVAE proporciona recursos 
           <p> Para una gran cantidad de gente en la sociedad existe una sensación y emoción muy personal, a menudo desagradable, que se mete en muchos aspectos de su vida: el dolor.</p>
           <p>Con un enfoque en el dolor como un síntoma así como una condición en sí mismo, es mi objetivo aquí desarrollar una variedad de recursos gratuitos para clínicos, pacientes, y otras personas curiosas. Quiero hacer fácil darle sentido a esta experiencia tan común y a la vez tan incomprendida (y estigmatizada).</p>
           <p>¡Siéntete libre de descargar y redistribuir mi contenido! Sólo que tengas en cuenta que actualizaré de forma continuada el sitio web a medida que evolucionen mis opiniones y ambiciones.</p>
-          <p><i>DESCARGO DE RESPONSABILIDAD: Este sitio web tiene sólo fines educativos. No estoy proporcionando aconsejo médico personalizado ni asumo ninguna responsabilidad por lo que hagas con la información presentada.</i></p>
         </div>
       </div>
     </section>
