Update 404, update spanish homepage

--- a/src/content/404.html
+++ b/src/content/404.html
@@ -1,20 +1,20 @@
 ---
-title: 404
+title: '404'
 permalink: /404/
 ---
 {% extends 'base.html' %}
 {% block body %}
 <main class="cover stack jfycenter flow1">
-  <div class="cluster g4 jfyaround itemscenter">
+  <div class="cluster gx4 itemscenter">
+    <p class="fs3 fw700">:(</p>
     <div class="flow1/2">
       <h1>404</h1>
       <div>
         <p class="fs2">We couldn't find what you're looking for.</p>
-        <p class="fs2">No hemos podido encontrar lo que has buscado.</p>
+        <p class="fs2">No hemos podido encontrar lo que estás buscando.</p>
       </div>
       <p><a href="/">Back to start / volver al inicio</a></p>
     </div>
-    <p class="fs6 fw700">:(</p>
   </div>
 </main>
 {% endblock %}
