--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -27,13 +27,13 @@ description: The pain revolution is here. Whether you're a health professional, 
       </div>
     </section>
     <section class="flow2">
-      <h2 class="h-lined">For patients</h2>
+      <h2 class="h-fancy">For patients</h2>
       <ul>
         <li><em>Stay tuned! ♫</em></li>
       </ul>
     </section>
     <section class="flow2">
-      <h2 class="h-lined">For professionals</h2>
+      <h2 class="h-fancy">For professionals</h2>
       <section class="flow1/3">
         <h3>Articles</h3>
         <ul class="flow1/3">
