--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -26,14 +26,14 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
         </div>
       </div>
     </section>
-    <section class="flow1">
-      <h2>Para personas con dolor:</h2>
+    <section class="flow2">
+      <h2 class="h-fancy">Para pacientes</h2>
       <ul>
         <li><em>¡Permanece atento!</em></li>
       </ul>
     </section>
     <section class="flow2">
-      <h2>Para sanitarios:</h2>
+      <h2 class="h-fancy">Para sanitarios</h2>
       <section class="flow1/3">
         <h3>Artículos</h3>
         <ul class="flow1/3">
