--- a/src/content/index.html
+++ b/src/content/index.html
@@ -13,7 +13,7 @@ description: The pain revolution is here. Whether you're a health professional, 
     </div>
     <ul class="[ flow1/2 ] [ fs1 ] [ pt0 bdt-2 bd-p500 ]">
       {% for language in site.languages %}
-        <li><a href="/{{ language.code }}/">{{ language.label }}</a></li>
+        <li><a href="/{{ language.code }}/" style="border: none;">{{ language.label }}</a></li>
       {% endfor %}
     </ul>
   </div>
