Change letter spacing, make two home columns

--- a/src/content/en/forms/omsq.html
+++ b/src/content/en/forms/omsq.html
@@ -7,7 +7,7 @@ title: ÖMSQ-12
 <main>
   <div class="[ stack g1 squeeze10 centerx ]">
     <h1>ÖMSQ-12</h1>
-    <form class="stack g3 itemscenter squeeze10">
+    <form class="stack g3">
       <div class="stack g0">
         <label data-hidden="true">Date<br>
           <input type="date">
