--- a/src/content/es/forms/omsq.html
+++ b/src/content/es/forms/omsq.html
@@ -7,7 +7,7 @@ title: ÖMSQ-12
 <main>
   <div class="[ stack g1 squeeze10 centerx ]">
     <h1>ÖMSQ-12</h1>
-    <form netlify netlify-honeypot="bot-field" action="/exito/" class="squeeze10 stack g3 itemscenter" name="omsq-12_es">
+    <form netlify netlify-honeypot="bot-field" action="/exito/" class="stack g3" name="omsq-12_es">
       <div class="stack g0">
         <label data-hidden="true">¡No rellenes este campo si eres humano!
           <input name="bot-field">
