--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -11,45 +11,49 @@ description: The pain revolution is here. Whether you're a health professional, 
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
-  <div class="stack g4 centerx squeeze11">
-    <section class="stack g1">
+  <div class="stack g4 centerx squeeze12">
+    <section class="stack g2">
       <h1>Welcome.</h1>
       <div class="sidebar g2 rowreverse jfyend itemsstart">
         <div class="[ image ] [ frame1:1 squeeze7 side7 ]">
           <img src="/assets/img/profile_me-res.jpg" alt="Frederik smiling at the camera">
         </div>
-        <div class="main50% flow1">
+        <div class="main50% squeeze9 flow1">
           <p>Hey there! I'm Frederik, a physiotherapy student at San Pablo University in Madrid, Spain. I love promoting health and helping people achieve their functional goals.</p>
-          <p>For a large number of people in society, there's a very personal, often unpleasant sensation and emotion which intrudes on many aspects of their life: pain.</p>
+          <p>For a large number of people in society, there's a very personal, often unpleasant sensation and emotion which intrudes on many aspects of their life: <strong>pain.</strong></p>
           <p>With a focus on pain as both a symptom and a condition in and of itself, my goal here is to develop a variety of free resources for clinicians, patients, and other curious people. I want to make it easy for everyone to make sense of this common yet misunderstood (and stigmatized) experience.</p>
-          <p>Feel free to download and redistribute my content! Just keep in mind that I will be continually updating the website as my views and ambitions evolve.</p>
         </div>
       </div>
     </section>
-    <section class="flow2">
-      <h2 class="h-fancy">For patients</h2>
-      <ul>
-        <li><em>Stay tuned! ♫</em></li>
-      </ul>
-    </section>
-    <section class="flow2">
-      <h2 class="h-fancy">For professionals</h2>
-      <section class="flow1/3">
-        <h3>Articles</h3>
-        <ul class="flow1/3">
-          {% set posts = collections[locale + "_articles"] %}
-          {% for entry in posts %}
-          <li><a href="{{ entry.url }}">{{ entry.data.title | capitalize }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}.{%endif %}</li>
-          {% endfor %}
-        </ul>
+    <div class="switcher12 gx2 gy4">
+      <section class="squeeze9 flow2">
+        <h2 class="h-fancy">Patients</h2>
+        <section class="flow1/3">
+          <h3>Articles</h3>
+          <ul>
+            <li><em>Stay tuned! ♫</em></li>
+          </ul>
+        </section>
       </section>
-      <section class="flow1/3">
-        <h3>Forms</h3>
-        <ul>
-          <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a> - a practical screening questionnaire for musculoskeletal complaints, adapted from <i>Gabel et al. 2013.</i></li>
-        </ul>
+      <section class="squeeze9 flow2">
+        <h2 class="h-fancy">Providers</h2>
+        <section class="flow1/3">
+          <h3>Articles</h3>
+          <ul class="flow1/3">
+            {% set posts = collections[locale + "_articles"] %}
+            {% for entry in posts %}
+            <li><a href="{{ entry.url }}">{{ entry.data.title | capitalize }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}.{%endif %}</li>
+            {% endfor %}
+          </ul>
+        </section>
+        <section class="flow1/3">
+          <h3>Forms</h3>
+          <ul>
+            <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a> - a practical screening questionnaire for musculoskeletal complaints, adapted from <i>Gabel et al. 2013.</i></li>
+          </ul>
+        </section>
       </section>
-    </section>
+    </div>
   </div>
 </main>
 {% include 'partials/footer.html' %}
