Rearrange homepage intro section

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -12,13 +12,13 @@ description: The pain revolution is here. Whether you're a health professional, 
 {% include 'partials/header.html' %}
 <main>
   <div class="stack g4 centerx squeeze12">
-    <section class="stack g2">
+    <section class="stack g2 squeeze11">
       <h1>Welcome.</h1>
-      <div class="sidebar g2 rowreverse jfyend itemsstart">
-        <div class="[ image ] [ frame1:1 squeeze7 side7 ]">
+      <div class="sidebar g2 itemsstart">
+        <div class="[ image ] [ frame1:1 squeeze6 side6 ]">
           <img src="/assets/img/profile_me-res.jpg" alt="Frederik smiling at the camera">
         </div>
-        <div class="main50% squeeze9 flow1">
+        <div class="main67% squeeze9 flow1">
           <p>Hey there! I'm Frederik, a physiotherapy student at San Pablo University in Madrid, Spain. I love promoting health and helping people achieve their functional goals.</p>
           <p>For a large number of people in society, there's a very personal, often unpleasant sensation and emotion which intrudes on many aspects of their life: <strong>pain.</strong></p>
           <p>With a focus on pain as both a symptom and a condition in and of itself, my goal here is to develop a variety of free resources for clinicians, patients, and other curious people. I want to make it easy for everyone to make sense of this common yet misunderstood (and stigmatized) experience.</p>
@@ -27,7 +27,7 @@ description: The pain revolution is here. Whether you're a health professional, 
     </section>
     <div class="switcher12 gx2 gy4">
       <section class="squeeze9 flow2">
-        <h2 class="h-fancy">Patients</h2>
+        <h2 class="h-fancy">For Patients</h2>
         <section class="flow1/3">
           <h3>Articles</h3>
           <ul>
@@ -36,7 +36,7 @@ description: The pain revolution is here. Whether you're a health professional, 
         </section>
       </section>
       <section class="squeeze9 flow2">
-        <h2 class="h-fancy">Providers</h2>
+        <h2 class="h-fancy">For Providers</h2>
         <section class="flow1/3">
           <h3>Articles</h3>
           <ul class="flow1/3">
