--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -12,13 +12,13 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
 {% include 'partials/header.html' %}
 <main>
   <div class="stack g4 centerx squeeze12">
-    <section class="stack g2">
+    <section class="stack g2 squeeze11">
       <h1>Bienvenido.</h1>
-      <div class="sidebar g2 rowreverse jfyend itemsstart">
-        <div class="[ image ] [ frame1:1 squeeze7 side7 ]">
+      <div class="sidebar g2 itemsstart">
+        <div class="[ image ] [ frame1:1 squeeze6 side6 ]">
           <img src="/assets/img/profile_me-res.jpg" alt="Frederik smiling at the camera">
         </div>
-        <div class="main50% squeeze9 flow1">
+        <div class="main67% squeeze9 flow1">
           <p>¡Hola! Me llamo Frederik y soy estudiante de fisioterapia en la Universidad San Pablo en Madrid, España. Me encanta promover la salud y ayudar a las personas a lograr sus objetivos funcionales.</p>
           <p> Para una gran cantidad de gente en la sociedad existe una sensación y emoción muy personal, a menudo desagradable, que se mete en muchos aspectos de su vida: <strong>el dolor.</strong></p>
           <p>Con un enfoque en el dolor como un síntoma así como una condición en sí mismo, es mi objetivo aquí desarrollar una variedad de recursos gratuitos para clínicos, pacientes, y otras personas curiosas. Quiero facilitar la comprensión de esta experiencia tan común y a la vez tan malinterpretada y estigmatizada.</p>
@@ -27,7 +27,7 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
     </section>
     <div class="switcher12 gx2 gy4">
       <section class="squeeze9 flow2">
-        <h2 class="h-fancy">Pacientes</h2>
+        <h2 class="h-fancy">Para Pacientes</h2>
         <section class="flow1/3">
           <h3>Artículos</h3>
           <ul>
@@ -36,7 +36,7 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
         </section>
       </section>
       <section class="squeeze9 flow2">
-        <h2 class="h-fancy">Sanitarios</h2>
+        <h2 class="h-fancy">Para Sanitarios</h2>
         <section class="flow1/3">
           <h3>Artículos</h3>
           <ul class="flow1/3">
