--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -11,7 +11,7 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
-  <div class="stack g4 centerx squeeze12">
+  <div class="stack g5 centerx squeeze12">
     <section class="stack g2 squeeze11">
       <h1>Bienvenido.</h1>
       <div class="sidebar g2 itemsstart">
@@ -25,7 +25,7 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
         </div>
       </div>
     </section>
-    <div class="switcher12 gx2 gy4">
+    <div class="switcher12 g3">
       <section class="squeeze9 flow2">
         <h2 class="h-fancy">Para Pacientes</h2>
         <section class="flow1/3">
