Change CC licence from BY-NC to BY-SA

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -30,7 +30,7 @@ description: The pain revolution is here. Whether you're a health professional, 
         <h2 class="h-fancy">For Patients</h2>
         <section class="flow1/3">
           <h3>Pain 101</h3>
-          <p class="fs-1"><em>Have you ever wondered what pain is and how it works? In this 3-part series we'll dive into the science of pain without getting too technical.</em></p>
+          <p class="fs-1"><em>Have you ever wondered what pain is and how it works? In this 3-part series we'll dive into the science of pain without getting overly technical.</em></p>
           <ul class="flow1/3">
             {% set posts = collections[locale + '_articles'] %}
             {% for entry in posts %}
